generator/frontend/frontend-basic-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: edge-namespace
spec:
  hosts:
  - "frontend.com"
  gateways:
  - frontend-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
